# comfund

./: Cargo.toml  README.md
comfund/: Cargo.toml
comfund/src/: actix_web.rs  axum.rs  lib.rs
comfund_macro_impl/: Cargo.toml
comfund_macro_impl/src/: extensions.rs  lib.rs
comfund_macro_impl/src/clients/: mod.rs
comfund_macro_impl/src/clients/reqwest/: mod.rs
comfund_macro_impl/src/contract/: content_type.rs  endpoint.rs  inputs.rs  method.rs  mod.rs  param.rs  query.rs  transport.rs
comfund_macro_impl/src/contract/inputs/: mod.rs
comfund_macro_impl/src/contract/param/: mod.rs
comfund_macro_impl/src/servers/: mod.rs  names.rs  server_endpoint.rs  wrap_fn.rs
comfund_macro_impl/src/servers/actix_web/: actix_endpoint.rs  configure_fn.rs  mod.rs  service_trait.rs  wrapper_mod.rs
comfund_macro_impl/src/servers/axum/: axum_endpoint.rs  mod.rs  route_fn.rs  service_trait.rs  wrapper_mod.rs
comfund_macro_impl/src/utils/: mod.rs  parse_ident.rs  path.rs
comfund_macros/: Cargo.toml
comfund_macros/src/: lib.rs
comfund_paths/: Cargo.toml
comfund_paths/src/: lib.rs  path_serializer.rs  path_template.rs
comfund_tests/: Cargo.toml  basic_expand.rs
comfund_tests/src/: lib.rs  service.rs
comfund_tests/src/basic/: actix_implementation.rs  axum_implelentation.rs  definition.rs  implelentation.rs  mod.rs
