[package]
name = "comfund"
version = "0.1.1"
edition = "2021"
authors = ["Chernoivanenko Serhii <chernoivanenkoofficial@gmail.com>"]
keywords = ["contract", "service", "http", "client", "web"]
categories = [
    "development-tools",
    "asynchronous",
    "network-programming",
    "web-programming::http-server",
    "web-programming::http-client",
]
description = "A WCF-like framework for defining service contracts."
documentation = "https://docs.rs/comfund"
repository = "https://github.com/chernoivanenkoofficial/comfund"
homepage = "https://github.com/chernoivanenkoofficial/comfund"
license = "MIT OR Apache-2.0"
readme = "README.md"


[dependencies]
comfund_macros = { path = "../comfund_macros", version = "0.1.0" }
paths = { package = "comfund_paths", path = "../comfund_paths", version = "0.1.0", optional = true }
serde = { workspace = true }
reqwest = { version = "0.12.12", optional = true, features = [
    "default-tls",
    "charset",
    "http2",
    "json",
    "multipart"
] }
actix-web = { version = "4.9.0", optional = true }
axum = { version = "0.8.4", optional = true, features = [
    "query",
    "matched-path",
    "original-uri",
    "multipart",
    "form"
] }

[features]
default = []

reqwest = ["dep:reqwest", "paths"]
