[package]
name = "comfund"
version = "0.1.4"
edition = "2021"
authors = ["Chernoivanenko Serhii <chernoivanenkoofficial@gmail.com>"]
keywords = ["contract", "service", "http", "client", "web"]
categories = [
    "development-tools",
    "asynchronous",
    "network-programming",
    "web-programming::http-server",
    "web-programming::http-client",
]
description = "A WCF-like framework for defining service contracts."
documentation = "https://docs.rs/comfund"
repository = "https://github.com/chernoivanenkoofficial/comfund"
homepage = "https://github.com/chernoivanenkoofficial/comfund"
license = "MIT OR Apache-2.0"
readme = "README.md"


[dependencies]
comfund_macros = { path = "../comfund_macros", version = "0.1.1" }
paths = { package = "comfund_paths", path = "../comfund_paths", version = "0.1.0", optional = true }
reqwest = { version = "0.12.22", optional = true, features = [] }

[features]
reqwest = ["dep:reqwest", "paths"]
actix-web = []
axum = []
