[package]
name = "comfund_macro_impl"
version = "0.1.0"
edition = "2021"
authors = ["Chernoivanenko Serhii <chernoivanenkoofficial@gmail.com>"]
keywords = ["comfund"]
categories = [
    "development-tools",
]
description = "Implementation of `comfund` macros."
license = "MIT or Apache-2.0"
readme = "README.md"

[dependencies]
comfund_paths = { path = "../comfund_paths", features = []}
deluxe = "0.5.0"
deluxe-core = "0.5.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.98"
stringcase = "0.4.0"